# favorite-place

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configuration/: .env.example
favorite_place/: __main__.py
favorite_place/api/: __init__.py
favorite_place/api/v1/: auth.py  health_check.py  place.py  record.py  user.py
favorite_place/config/: __init__.py  dependencies.py  settings.py
favorite_place/database/: clients.py  indexes.py  utils.py
favorite_place/database/crud/: place.py  record.py  user.py
favorite_place/database/models/: common.py  place.py  record.py  user.py
favorite_place/dependencies/: auth.py  database.py  settings.py
favorite_place/schemas/: auth.py  errors.py  health_check.py  place.py  record.py  user.py
favorite_place/services/: auth.py
favorite_place/utils/: createsuperuser.py  responses.py  setups.py
