[tool.poetry]
name = "favorite-place"
version = "0.1.0"
description = ""
authors = ["iteamurr <iteamurr@gmail.com>"]
readme = "README.md"
packages = [{include = "favorite_place"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
motor = "^3.1.1"
redis = {extras = ["hiredis"], version = "^4.4.2"}
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pyclean = "^2.4.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 88
extension-pkg-whitelist = "pydantic"
good-names = ["db"]
fail-under = 9.0
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.isort]
line_length = 88
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
